added create workspace flow
