# gen/http/kollap/server/encode_decode.go
@@ -1,44 +1,0 @@
-// Code generated by goa, DO NOT EDIT.
-//
-// kollap HTTP server encoders and decoders
-//
-// Command:
-// $ goa gen Collap/design
-
-package server
-
-import (
-	"context"
-	"net/http"
-
-	goahttp "goa.design/goa/v3/http"
-)
-
-// EncodeCreateWorkspaceResponse returns an encoder for responses returned by
-// the kollap createWorkspace endpoint.
-func EncodeCreateWorkspaceResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
-	return func(ctx context.Context, w http.ResponseWriter, v any) error {
-		res, _ := v.(string)
-		enc := encoder(ctx, w)
-		body := res
-		w.WriteHeader(http.StatusOK)
-		return enc.Encode(body)
-	}
-}
-
-// DecodeCreateWorkspaceRequest returns a decoder for requests sent to the
-// kollap createWorkspace endpoint.
-func DecodeCreateWorkspaceRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (string, error) {
-	return func(r *http.Request) (string, error) {
-		var payload string
-		var (
-			name string
-
-			params = mux.Vars(r)
-		)
-		name = params["name"]
-		payload = name
-
-		return payload, nil
-	}
-}
