# gen/http/kollap/server/paths.go
@@ -1,17 +1,0 @@
-// Code generated by goa, DO NOT EDIT.
-//
-// HTTP request path constructors for the kollap service.
-//
-// Command:
-// $ goa gen Collap/design
-
-package server
-
-import (
-	"fmt"
-)
-
-// CreateWorkspaceKollapPath returns the URL path to the kollap service createWorkspace HTTP endpoint.
-func CreateWorkspaceKollapPath(name string) string {
-	return fmt.Sprintf("/workspace/%v", name)
-}
