# gen/http/kollap/server/server.go
@@ -1,130 +1,0 @@
-// Code generated by goa, DO NOT EDIT.
-//
-// kollap HTTP server
-//
-// Command:
-// $ goa gen Collap/design
-
-package server
-
-import (
-	kollap "Collap/gen/kollap"
-	"context"
-	"net/http"
-
-	goahttp "goa.design/goa/v3/http"
-	goa "goa.design/goa/v3/pkg"
-)
-
-// Server lists the kollap service endpoint HTTP handlers.
-type Server struct {
-	Mounts          []*MountPoint
-	CreateWorkspace http.Handler
-}
-
-// MountPoint holds information about the mounted endpoints.
-type MountPoint struct {
-	// Method is the name of the service method served by the mounted HTTP handler.
-	Method string
-	// Verb is the HTTP method used to match requests to the mounted handler.
-	Verb string
-	// Pattern is the HTTP request path pattern used to match requests to the
-	// mounted handler.
-	Pattern string
-}
-
-// New instantiates HTTP handlers for all the kollap service endpoints using
-// the provided encoder and decoder. The handlers are mounted on the given mux
-// using the HTTP verb and path defined in the design. errhandler is called
-// whenever a response fails to be encoded. formatter is used to format errors
-// returned by the service methods prior to encoding. Both errhandler and
-// formatter are optional and can be nil.
-func New(
-	e *kollap.Endpoints,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
-) *Server {
-	return &Server{
-		Mounts: []*MountPoint{
-			{"CreateWorkspace", "GET", "/workspace/{name}"},
-		},
-		CreateWorkspace: NewCreateWorkspaceHandler(e.CreateWorkspace, mux, decoder, encoder, errhandler, formatter),
-	}
-}
-
-// Service returns the name of the service served.
-func (s *Server) Service() string { return "kollap" }
-
-// Use wraps the server handlers with the given middleware.
-func (s *Server) Use(m func(http.Handler) http.Handler) {
-	s.CreateWorkspace = m(s.CreateWorkspace)
-}
-
-// MethodNames returns the methods served.
-func (s *Server) MethodNames() []string { return kollap.MethodNames[:] }
-
-// Mount configures the mux to serve the kollap endpoints.
-func Mount(mux goahttp.Muxer, h *Server) {
-	MountCreateWorkspaceHandler(mux, h.CreateWorkspace)
-}
-
-// Mount configures the mux to serve the kollap endpoints.
-func (s *Server) Mount(mux goahttp.Muxer) {
-	Mount(mux, s)
-}
-
-// MountCreateWorkspaceHandler configures the mux to serve the "kollap" service
-// "createWorkspace" endpoint.
-func MountCreateWorkspaceHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("GET", "/workspace/{name}", f)
-}
-
-// NewCreateWorkspaceHandler creates a HTTP handler which loads the HTTP
-// request and calls the "kollap" service "createWorkspace" endpoint.
-func NewCreateWorkspaceHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
-) http.Handler {
-	var (
-		decodeRequest  = DecodeCreateWorkspaceRequest(mux, decoder)
-		encodeResponse = EncodeCreateWorkspaceResponse(encoder)
-		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "createWorkspace")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "kollap")
-		payload, err := decodeRequest(r)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		res, err := endpoint(ctx, payload)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			if errhandler != nil {
-				errhandler(ctx, w, err)
-			}
-		}
-	})
-}
