# gen/kollap/endpoints.go
@@ -1,40 +1,0 @@
-// Code generated by goa, DO NOT EDIT.
-//
-// kollap endpoints
-//
-// Command:
-// $ goa gen Collap/design
-
-package kollap
-
-import (
-	"context"
-
-	goa "goa.design/goa/v3/pkg"
-)
-
-// Endpoints wraps the "kollap" service endpoints.
-type Endpoints struct {
-	CreateWorkspace goa.Endpoint
-}
-
-// NewEndpoints wraps the methods of the "kollap" service with endpoints.
-func NewEndpoints(s Service) *Endpoints {
-	return &Endpoints{
-		CreateWorkspace: NewCreateWorkspaceEndpoint(s),
-	}
-}
-
-// Use applies the given middleware to all the "kollap" service endpoints.
-func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
-	e.CreateWorkspace = m(e.CreateWorkspace)
-}
-
-// NewCreateWorkspaceEndpoint returns an endpoint function that calls the
-// method "createWorkspace" of service "kollap".
-func NewCreateWorkspaceEndpoint(s Service) goa.Endpoint {
-	return func(ctx context.Context, req any) (any, error) {
-		p := req.(string)
-		return s.CreateWorkspace(ctx, p)
-	}
-}
