# internal/document/handler.go
@@ -1,14 +1,0 @@
-package document
-
-import (
-	"io"
-	"net/http"
-)
-
-func HealthCheck(w http.ResponseWriter, r *http.Request) {
-	io.WriteString(w, "Service Working")
-}
-
-func GetDocuments(w http.ResponseWriter, r *http.Request) {
-
-}
